--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,16 @@ body > div {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+button {
+  font-size: medium;
+  background-color: "#3366ff";
+  border: none;
 }
