--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: auto;
   height: 100vh;
-  font-family: sans-serif;
+  font-family: Fira Mono;
 }
 
 body > div {
@@ -15,10 +15,13 @@ body > div {
 a {
   color: black;
   text-decoration: none;
+  font-family: Fira Mono;
 }
 
 button {
   font-size: medium;
-  background-color: "#3366ff";
+  background-color: "rgb(255, 250, 250)";
   border: none;
+  border-radius: 0.3em;
+  font-family: Fira Mono;
 }
